tests/baselines/reference/derivedClassWithPrivateInstanceShadowingProtectedInstance.errors.txt
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassWithPrivateInstanceShadowingProtectedInstance.ts(12,7): error TS2415: Class 'Derived' incorrectly extends base class 'Base'.
  Property 'x' is private in type 'Derived' but not in type 'Base'.


==== tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassWithPrivateInstanceShadowingProtectedInstance.ts (1 errors) ====
    class Base {
        protected x: string;
        protected fn(): string {
            return '';
        }
    
        protected get a() { return 1; }
        protected set a(v) { }
    }
    
    // error, not a subtype
    class Derived extends Base {
          ~~~~~~~
!!! error TS2415: Class '{|Derived|0|}' incorrectly extends base class '{|Base|1|}'.
!!! error TS2415:   Property 'x' is private in type 'Derived' but not in type 'Base'.
!!! annotated symbol 0 tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassWithPrivateInstanceShadowingProtectedInstance.ts:12:7
!!! annotated symbol 1 tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassWithPrivateInstanceShadowingProtectedInstance.ts:1:7
        private x: string; 
        private fn(): string {
            return '';
        }
    
        private get a() { return 1; }
        private set a(v) { }
    }
    